changed footer style to fix visibility of team members

--- a/dashboard/src/app/components/footer/footer.component.scss
+++ b/dashboard/src/app/components/footer/footer.component.scss
@@ -1,3 +1,5 @@
+@import '../header/header.component.scss';
+
 .footer {
     width: 100%;
     height: 70px;
@@ -8,8 +10,11 @@
     align-items: center;
     gap: 10px;
     padding: 20px;
-    padding-inline: 80px;
+    padding-inline: $padding-inline;
     color: #ffffff;
+    background-color: var(--bgColorSecondary);
+    border-top: 2px solid var(--textColorSecondary);
+
     p {
         font-size: 1.5rem;
         font-weight: bold;
