--- a/dashboard/src/app/pages/results/results.component.scss
+++ b/dashboard/src/app/pages/results/results.component.scss
@@ -2,7 +2,7 @@
   padding-top: 50px;
   width: 100%;
   height: 100%;
-  padding-inline: 5%;
+  padding-inline: 3%;
   .info-container {
     display: flex;
     justify-content: space-between;
